bk_ida/gccida/c1/dwarf2out_source_line
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dwarf2out_source_line/src/dwarf2out.c:12303:21: error: use of undeclared identifier 'debug_info_level_0'
if ( ( unsigned int)debug_info_level_0 >= DINFO_LEVEL_NORMAL ) 
                    ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dwarf2out_source_line/src/obj/dwarf2out.o] Error 1
